ch4/src/pass/snapshots/ch4__pass__explicate_control__tests__const_cond.snap
---
source: ch4/src/pass/explicate_control.rs
expression: result.to_string_pretty()

---
locals: {}

start:
    return 2

