ch4/src/pass/snapshots/ch4__pass__explicate_control__tests__if_in_init.snap
---
source: ch4/src/pass/explicate_control.rs
expression: result.to_string_pretty()
---
locals: {x.0: Int, (tmp).0: Int, (tmp).1: Bool}

.start:
    (tmp).0 = (read)
    if (>= (tmp).0 3) goto .block3 else goto .block4
.block3:
    x.0 = 10
    goto .block2
.block4:
    x.0 = 77
    goto .block2
.block2:
    (tmp).1 = (eq? x.0 10)
    if (eq? (tmp).1 #f) goto .block1 else goto .block0
.block1:
    return 41
.block0:
    return 2

