ch4/src/pass/snapshots/ch4__pass__explicate_control__tests__let_in_init.snap
---
source: ch4/src/pass/explicate_control.rs
expression: result.to_string_pretty()
---
locals: {y.2: Int, x.0: Int, x.1: Int}

.start:
    x.0 = 20
    x.1 = 22
    y.2 = (+ x.0 x.1)
    return y.2

