ch4/src/pass/snapshots/ch4__pass__explicate_control__tests__nested_if.snap
---
source: ch4/src/pass/explicate_control.rs
expression: result.to_string_pretty()
---
locals: {x.0: Int, y.1: Int}

start:
    x.0 = (read)
    y.1 = (read)
    if (< x.0 1) goto block2 else goto block3
block2:
    if (eq? x.0 0) goto block0 else goto block1
block3:
    if (eq? x.0 2) goto block0 else goto block1
block0:
    return (+ y.1 2)
block1:
    return (+ y.1 10)

