ch4/src/pass/snapshots/ch4__pass__explicate_control__tests__nested_prims.snap
---
source: ch4/src/pass/explicate_control.rs
expression: result.to_string_pretty()

---
locals: {x.0, y.1, tmp.0, tmp.1, tmp.2, tmp.3}

start:
    x.0 = (read)
    y.1 = (+ 2 3)
    tmp.0 = (read)
    tmp.1 = (- tmp.0)
    tmp.2 = (- 2)
    tmp.3 = (+ y.1 tmp.2)
    return (+ tmp.1 tmp.3)
