ch4/src/pass/snapshots/ch4__pass__explicate_control__tests__shrink_and.snap
---
source: ch4/src/pass/explicate_control.rs
expression: result.to_string_pretty()

---
locals: {tmp.0, tmp.1}

start:
    tmp.0 = (read)
    if (eq? tmp.0 0) goto block2 else goto block1
block2:
    tmp.1 = (read)
    if (eq? tmp.1 2) goto block0 else goto block1
block1:
    return 42
block0:
    return 0

